src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__for_statement_continue.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer, section "var-$RUSTY$prg_instance:r1i32"

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store i32 3, i32* %x, align 4
  br label %condition_check

condition_check:                                  ; preds = %increment, %entry
  %load_x = load i32, i32* %x, align 4
  %load_x1 = load i32, i32* %x, align 4
  %tmpVar = icmp sle i32 %load_x1, 10
  %1 = zext i1 %tmpVar to i8
  %2 = icmp ne i8 %1, 0
  br i1 %2, label %3, label %6

for_body:                                         ; preds = %13
  br label %increment

increment:                                        ; preds = %for_body
  %tmpVar8 = add i32 %load_x, 1
  store i32 %tmpVar8, i32* %x, align 4
  br label %condition_check

continue:                                         ; preds = %13
  %load_x9 = load i32, i32* %x, align 4
  ret void

3:                                                ; preds = %condition_check
  %load_x2 = load i32, i32* %x, align 4
  %tmpVar3 = icmp sge i32 %load_x2, 3
  %4 = zext i1 %tmpVar3 to i8
  %5 = icmp ne i8 %4, 0
  br label %6

6:                                                ; preds = %3, %condition_check
  %7 = phi i1 [ %2, %condition_check ], [ %5, %3 ]
  %8 = zext i1 %7 to i8
  %9 = icmp ne i8 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %6
  %load_x4 = load i32, i32* %x, align 4
  %tmpVar5 = icmp sge i32 %load_x4, 10
  %11 = zext i1 %tmpVar5 to i8
  %12 = icmp ne i8 %11, 0
  br i1 %12, label %17, label %20

13:                                               ; preds = %20, %6
  %14 = phi i1 [ %9, %6 ], [ %23, %20 ]
  %15 = zext i1 %14 to i8
  %16 = icmp ne i8 %15, 0
  br i1 %16, label %for_body, label %continue

17:                                               ; preds = %10
  %load_x6 = load i32, i32* %x, align 4
  %tmpVar7 = icmp sle i32 %load_x6, 3
  %18 = zext i1 %tmpVar7 to i8
  %19 = icmp ne i8 %18, 0
  br label %20

20:                                               ; preds = %17, %10
  %21 = phi i1 [ %12, %10 ], [ %19, %17 ]
  %22 = zext i1 %21 to i8
  %23 = icmp ne i8 %22, 0
  br label %13
}
